--- a/Razor/Razor.csproj
+++ b/Razor/Razor.csproj
@@ -128,6 +128,7 @@
       <SubType>Designer</SubType>
     </Content>
     <Content Include="Views\_BasicLayout.cshtml" />
+    <Content Include="Views\Home\NameAndPrice.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
